--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
     font-weight: bold;
     color: khaki;
     text-align: center;
-    background-image: url("file:///C:/Users/Nick's%20Laptop/Pictures/Project%20Images/Dasmoto's-banner.webp");
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
 }
 
 h2 {
